# pods

./: environment.yml  pyproject.toml
.github/workflows/: scheduler.yml  single.yml
config/: bilibili.json  extra-rss.json  youtube.json
podsync/: bilibili.py  github.py  mark-as-done.py  podcast.py  refresh-opml.py  utils.py
scripts/: change-cover.py
